# matchlock

./: Cargo.toml  PROTOCOL.md  README.md  jest.config.js  package-lock.json  package.json  tsconfig.json
.forgejo/workflows/: ci.yml
crates/matchlock-core/: Cargo.toml
crates/matchlock-core/src/: commit.rs  dh.rs  ecies.rs  error.rs  lib.rs  nullifier.rs  signing.rs  types.rs
crates/matchlock-core/tests/: kat.rs
examples/: mutual-match.ts
src/: errors.ts  index.ts  types.ts
src/dh/: commit.ts  ecies.ts  index.ts  nullifier.ts  signing.ts  utils.ts
src/psi/: index.ts  service.ts  types.ts
test/: errors.test.ts
test/dh/: commit.test.ts  dh.test.ts  ecies.test.ts  nullifier.test.ts  signing.test.ts  validate.test.ts
test/psi/: psi.test.ts
